--- a/thematiques/07-P2P.md
+++ b/thematiques/07-P2P.md
@@ -27,8 +27,6 @@ graph TD
     E --- C
 ```
 
----
-
 ## Comparaison des deux architectures
 
 | **Critère**         | **Client-Serveur**                                       | **Peer-to-Peer (P2P)**                                                  |
@@ -40,21 +38,19 @@ graph TD
 | **Sécurité**        | Plus facile à sécuriser, mais centralisé = cible unique. | Difficile à sécuriser : les pairs sont variés et dispersés.             |
 | **Exemple d’usage** | Services web, emails, banques en ligne.                  | Partage de fichiers, blockchain, VoIP (Skype).                          |
 
----
-
 ## Avantages et inconvénients
 
 **Architecture Client-Serveur :**
 
 - *Avantages :*
     - Facilité de gestion et de maintenance.
-    - Centralisation simplifie les mises à jour et la sécurité.
+    - La centralisation simplifie les mises à jour et la sécurité.
     - Bonne performance pour des systèmes de taille moyenne.
 
 - *Inconvénients :*
-    - Point de défaillance unique.
+    - Point de défaillance unique (**à nuancer notamment en utilisant [anycast](https://en.wikipedia.org/wiki/Anycast) et un cluster...**).
     - Coût élevé pour des serveurs robustes.
-    - Scalabilité limitée si la charge augmente rapidement.
+    - Scalabilité limitée si la charge augmente rapidement (en imaginant un besoin de synchronisation de données comme la session...).
 
 **Architecture P2P :**
 
@@ -73,28 +69,21 @@ graph TD
 ## Exemples d’utilisation
 
 - **Client-Serveur :**
-    - *Cas pratique :* Une application de banque en ligne où le serveur gère les comptes et transactions.
+    - Une application de banque en ligne où le serveur gère les comptes et transactions.
         - Le client se connecte, envoie une requête pour afficher son solde.
         - Le serveur traite la requête et renvoie les données au client.
 
 - **P2P :**
-    - *Cas pratique :* Partage de fichiers avec BitTorrent.
+    - Partage de fichiers avec BitTorrent.
         - Un utilisateur partage une vidéo. Les autres pairs téléchargent les fragments du fichier directement depuis
           plusieurs sources (pairs) en parallèle.
 
----
+> [!IMPORTANT]  
+> Une architecture "client-serveur" peut cacher une architecture plus complexe (cluster, cloud, ...) qui cumule certains
+> avantages (et inconvénient surtout au niveau du coût et de la maintenance) des 2 architectures...
+> Plus d’informations au chapitre [Design for failure](08-Resilience.md)
 
-## Implications techniques
-
-- **Client-Serveur :**
-    - Architecture idéale pour des environnements où le contrôle centralisé est essentiel (banques, entreprises).
-    - Limité pour des besoins massifs en trafic (exemple : panne lors d’un Black Friday).
-
-- **P2P :**
-    - Utile pour les applications nécessitant un partage massif ou décentralisé (blockchain, torrents).
-    - Moins adapté aux systèmes nécessitant un contrôle strict ou une haute sécurité.
-
-## Exemple de flux basique
+## Exemple de flux basique d’une application P2P
 
 ```mermaid
 flowchart TD
